# iMvaders

./: .gitignore  BasicEnemy.cpp  BasicEnemy.h  BasicEnemyBase.cpp  BasicEnemyBase.h  BurstShotEnemy.cpp  BurstShotEnemy.h  CMakeLists.txt  Collisionable.cpp  EnemyGroup.cpp  EnemyGroup.h  P.h  Renderable.h  Updatable.cpp  Updatable.h  background.cpp  background.h  bre.cpp  bre.h  bullet.cpp  bullet.h  curve.cpp  curve.h  enemy.cpp  enemy.h  explosion.cpp  explosion.h  gameEntity.cpp  gameEntity.h  iMvaders.cbp  iMvaders.cscope_file_list  index.html  main.cpp  mainMenu.h  params.json  player.cpp  player.h  postProcessManager.cpp  postProcessManager.h  random.h  (+7 more)
ArduinoController/: Readme.txt
ArduinoController/ATMega2560/: Main.cpp  Serial.cpp  Serial.h  fastio.h
ArduinoController/ATMega8U2/: ATMega8U2.cbp  Descriptors.c  Descriptors.h  Keyboard.c  Keyboard.h  LEDs.h
game/: iMvaders.cbp
game/resources/: crt.frag  glitch.frag  pixel.frag  stage.lua
game/src/SpaceControl/: Battery.h  EnergyGrid.cpp  EnergyGrid.h  Main.cpp  MainEngines.h  Mesh.cpp  Player.cpp  PressureValve.h  TemperaturePart.cpp  generator.h  gui.h  planet.cpp  planet.h  spaceObject.h
game/src/engine/: Collisionable.cpp  Collisionable.h  P.h  Renderable.cpp  engine.cpp  engine.h  gameEntity.cpp  httpServer.cpp  input.h  multiplayer.cpp  multiplayer.h  postProcessManager.cpp  postProcessManager.h  resources.cpp  resources.h  scriptInterface.h  scriptInterfaceMagic.cpp  scriptInterfaceMagic.h  soundManager.cpp  soundManager.h  stringImproved.cpp  stringImproved.h  stringUtils.h  textureManager.cpp  textureManager.h  windowManager.cpp  windowManager.h
game/src/iMvader/: BasicEnemyBase.cpp  StarBackground.cpp  StarBackground.h  bonusRound.cpp  bre.cpp  bre.h  bullet.cpp  digitizer.cpp  digitizer.h  diveBomber.cpp  explosion.cpp  explosion.h  gameState.cpp  gameState.h  main.cpp  main.h  mainMenu.cpp  mainMenu.h  oldPrinters.cpp  oldPrinters.h  player.cpp  player.h  powerupCarrier.cpp  replicatorZ18.cpp  replicatorZ18.h  scoreManager.h  textDraw.h  transmission.cpp  transmission.h  versusGameMode.cpp  versusGameMode.h
resources/: edge.frag  stage.lua
resources/Systems/: 513-920.lua
src/: BasicEnemy.h  BasicEnemyBase.cpp  BasicEnemyBase.h  BurstShotEnemy.cpp  BurstShotEnemy.h  EnemyGroup.cpp  EnemyGroup.h  PlayerController.cpp  PlayerController.h  StarBackground.cpp  StarBackground.h  bonusRound.cpp  bre.cpp  bre.h  bullet.cpp  bullet.h  curve.cpp  curve.h  digitizer.cpp  digitizer.h  diveBomber.cpp  explosion.cpp  explosion.h  gameEntity.cpp  gameEntity.h  gameState.cpp  gameState.h  henk.cpp  main.cpp  main.h  mainMenu.cpp  mainMenu.h  nuke.cpp  nuke.h  objectListWatcher.cpp  oldPrinters.cpp  oldPrinters.h  player.cpp  player.h  powerup.cpp  (+15 more)
src/SpaceControl/: AutoPilot.h  Battery.h  CO2Scrubber.h  CrewCapsule.h  EnergyGrid.cpp  EnergyGrid.h  Heater.h  Main.cpp  MainEngines.h  Mesh.h  Player.cpp  Player.h  PressureValve.h  ReactionTrusters.h  SolarPanel.h  SpaceRenderer.cpp  SpaceRenderer.h  StorageTank.h  TemperaturePart.cpp  TemperaturePart.h  chemicals.cpp  chemicals.h  generator.h  gui.cpp  gui.h  planet.cpp  planet.h  radarDisplay.cpp  radarDisplay.h  radiator.h  spaceObject.cpp  spaceObject.h  textDraw.cpp  textDraw.h
src/engine/: Collisionable.cpp  Collisionable.h  P.h  Updatable.cpp  engine.cpp  engine.h  gameEntity.h  input.cpp  input.h  postProcessManager.cpp  postProcessManager.h  random.h  scriptInterface.cpp  scriptInterface.h  scriptInterfaceMagic.cpp  scriptInterfaceMagic.h  soundManager.cpp  soundManager.h  stringUtils.h  textureManager.cpp  textureManager.h  vectorUtils.h  windowManager.cpp  windowManager.h
src/iMvader/: BasicEnemy.cpp  BasicEnemy.h  BasicEnemyBase.cpp  BasicEnemyBase.h  BurstShotEnemy.cpp  BurstShotEnemy.h  Collisionable.h  EnemyGroup.cpp  EnemyGroup.h  StarBackground.cpp  StarBackground.h  background.cpp  background.h  bonusRound.cpp  bre.cpp  bre.h  bullet.cpp  bullet.h  curve.cpp  digitizer.cpp  digitizer.h  explosion.cpp  explosion.h  gameState.cpp  gameState.h  henk.cpp  main.cpp  mainMenu.cpp  mainMenu.h  nuke.cpp  nuke.h  objectListWatcher.cpp  oldPrinters.cpp  player.cpp  player.h  powerup.cpp  powerup.h  powerupCarrier.cpp  powerupCarrier.h  replicatorZ18.cpp  (+7 more)
